--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
 
     <repositories>
         <repository>
+            <id>apache-releases</id>
+            <url>https://repository.apache.org/content/groups/public</url>
+        </repository>
+        
+        <repository>
             <id>cloudera</id>
             <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
         </repository>
