--- a/camus-example/src/main/resources/camus.properties
+++ b/camus-example/src/main/resources/camus.properties
@@ -35,7 +35,7 @@ kafka.message.coder.schema.registry.class=com.linkedin.camus.example.DummySchema
 mapred.map.tasks=30
 # max historical time that will be pulled from each partition based on event timestamp
 kafka.max.pull.hrs=1
-# events with a timestamp older than this will be discarded. 
+# events with a timestamp older than this will be discarded.
 kafka.max.historical.days=3
 # Max minutes for each mapper to pull messages (-1 means no limit)
 kafka.max.pull.minutes.per.task=-1
@@ -95,3 +95,8 @@ kafka.client.so.timeout=60000
 
 #zookeeper.session.timeout=
 #zookeeper.connection.timeout=
+
+#statsd datadog integration
+statsd.enabled=false
+statsd.host=localhost
+statsd.port=8125
