--- a/camus-sweeper/pom.xml
+++ b/camus-sweeper/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.linkedin.camus</groupId>
     <artifactId>camus-sweeper</artifactId>
     <name>Camus compaction code small files produced Camus</name>
-    <version>0.1.0-shopify1</version>
+    <version>0.1.0-SNAPSHOT</version>
 
     <parent>
         <groupId>com.linkedin.camus</groupId>
@@ -19,22 +19,22 @@
             <version>1.0.4</version>
         </dependency>
 
-		<dependency>
-			<groupId>org.apache.avro</groupId>
-			<artifactId>avro-mapred</artifactId>
-			<version>1.7.7</version>
-		</dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.2</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.apache.avro</groupId>
-			<artifactId>avro</artifactId>
-			<version>1.7.7</version>
-		</dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro-mapred</artifactId>
+            <version>1.7.7</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
-            <version>1.7.4</version>
+            <version>1.7.7</version>
         </dependency>
 
         <dependency>
@@ -68,7 +68,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
+                <version>1.7.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
