Leaner camus-shopify jar
This PR solves two minor issues:
1) ERROR - SLF4J: Class path contains multiple SLF4J bindings.
2) Some overlapping classes

It does this by excluding explicitly the jars that are causing these problems.

--- a/camus-shopify/pom.xml
+++ b/camus-shopify/pom.xml
@@ -43,7 +43,18 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <artifactSet>
+                                <includes>
+                                    <include>*</include>
+                                </includes>
+                                <excludes>
+                                    <exclude>log4j:log4j:*</exclude>
+                                    <exclude>org.slf4j:*</exclude>
+                                    <exclude>commons-beanutils:commons-beanutils:*</exclude>
+                                    <exclude>com.github.sgroschupf:zkclient:*</exclude>
+                                    <exclude>org.mortbay.jetty:servlet-api:*</exclude>
+                                </excludes>
+                            </artifactSet>
                         </configuration>
                     </execution>
                 </executions>
