--- a/pom.xml
+++ b/pom.xml
@@ -73,22 +73,22 @@
       <dependency>
 	<groupId>joda-time</groupId>
 	<artifactId>joda-time</artifactId>
-	<version>1.6.2</version>
+	<version>2.2</version>
       </dependency>
       <dependency>
 	<groupId>org.apache.hadoop</groupId>
 	<artifactId>hadoop-mapreduce-client-core</artifactId>
-	<version>2.3.0</version>
+	<version>2.5.0-cdh5.2.0</version>
       </dependency>
       <dependency>
 	<groupId>org.apache.hadoop</groupId>
 	<artifactId>hadoop-mapreduce-client-common</artifactId>
-	<version>2.3.0</version>
+	<version>2.5.0-cdh5.2.0</version>
       </dependency>
       <dependency>
 	<groupId>org.apache.hadoop</groupId>
 	<artifactId>hadoop-common</artifactId>
-	<version>2.3.0</version>
+	<version>2.5.0-cdh5.2.0</version>
       </dependency>
       <dependency>
 	<groupId>org.easymock</groupId>
@@ -181,6 +181,10 @@
     <repository>
       <id>apache-releases</id>
         <url>https://repository.apache.org/content/groups/public</url>
+      </repository>
+   	<repository>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
     </repository>
   </repositories>
 
