Skip tests when deploying
They are already run in Circle

--- a/shipit.yml
+++ b/shipit.yml
@@ -4,5 +4,5 @@ dependencies:
 
 deploy:
   override:
-    - mvn clean package
+    - mvn clean package -DskipTests
     - camus-shopify/script/deploy
