Fixed syntax in service.yml

--- a/service.yml
+++ b/service.yml
@@ -1,7 +1,5 @@
 # https://services.shopify.io/services/camus/production
-director:
-@airhorns
+director: airhorns
 owners:
-data-acquisition@shopify.com
-classification: 
-gamma
+- Shopify/data-acquisition
+classification: tier2
